# inventory_qt

./: .gitignore  CMakeLists.txt
include/: db.hpp  global.hpp  inventory.hpp  mainwindow.hpp
res/: resources.qrc
src/: db.cpp  global.cpp  inventory.cpp  main.cpp  mainwindow.cpp
